Add user property in Container.Application.Docker

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1195,6 +1195,9 @@ node_types:
       command:
         required: no
         type: string
+      user:
+        required: no
+        type: string
       uris:
         required: no
         type: list
