Add helm chart in kube example

--- a/examples/kubernetes_cluster.yaml
+++ b/examples/kubernetes_cluster.yaml
@@ -45,6 +45,18 @@ topology_template:
 
   node_templates:
 
+    im_chart:
+      type: tosca.nodes.indigo.Kubernetes.HelmChart
+      properties:
+        repository_name: grycap
+        repository_url: https://grycap.github.io/helm-charts/
+        name: IM
+        version: latest
+        values: {'im.version': '1.9.3'}
+      requirements:
+        - host: lrms_front_end
+
+
     lrms_front_end:
       type: tosca.nodes.indigo.LRMS.FrontEnd.Kubernetes
       properties:
