--- a/artifacts/lrms/kubernetes/helm_chart.yml
+++ b/artifacts/lrms/kubernetes/helm_chart.yml
@@ -6,7 +6,7 @@
   tasks:
 
   - name: "Check if {{ helm_app_name }} is already deployed"
-    shell: helm list | grep helm-{{ helm_app_name | lower }}-app
+    command: helm status {{ helm_app_name | lower }}
     register: deployed
     failed_when: deployed.rc != 0 and deployed.rc != 1
 
@@ -22,14 +22,9 @@
           helm_params: "{{ helm_params }},{{ item.key }}={{ item.value }}"
         with_dict: "{{ helm_values }}"
 
-      - name: Create values file
-        copy:
-          content: "{{ helm_values | to_yaml }}"
-          dest: /tmp/{{ helm_app_name }}-values.yaml
-
       - name: Deploy {{ helm_app_name }} app
         command: >
-          helm upgrade helm-{{ helm_app_name | lower }}-app --install {{ helm_repo_name }}/{{ helm_app_name }} {{ '' if helm_version == 'latest' else ('--version ' + helm_version) }}
+          helm upgrade {{ helm_app_name | lower }} --install {{ helm_repo_name }}/{{ helm_app_name }} {{ '' if helm_version == 'latest' else ('--version ' + helm_version) }}
           --namespace {{ helm_app_name | lower}} --create-namespace
           --set {{ helm_params }}
         environment:
