--- a/examples/kubernetes_cluster.yaml
+++ b/examples/kubernetes_cluster.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/helm_charts_micafer/custom_types.yaml
 
 description: >
   TOSCA test for launching a Kubernetes Virtual Cluster.
@@ -46,7 +46,7 @@ topology_template:
   node_templates:
 
     im_chart:
-      type: tosca.nodes.indigo.HelmChart
+      type: tosca.nodes.indigo.Helm.Chart
       properties:
         repository_name: grycap
         repository_url: https://grycap.github.io/helm-charts/
