--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -353,6 +353,13 @@ node_types:
           type: tosca.datatypes.indigo.User
         default: []
         required: false
+      tags:
+        type: map
+        description: Map of tags to associate to the Compute instance
+        entry_schema:
+          type: string
+        default: {}
+        required: false
     capabilities:
       scalable:
         type: tosca.capabilities.indigo.Scalable
