Add new placement type

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -2773,6 +2773,18 @@ node_types:
         default: {}
 
 policy_types:
+
+  tosca.policies.indigo.Placement:
+    derived_from: tosca.policies.Placement
+    properties:
+      clud_id:
+        required: true
+        type: string
+      availability_zone:
+        required: false
+        type: string
+        default: 
+
   tosca.policies.indigo.SlaPlacement:
     derived_from: tosca.policies.Placement
     properties:
