--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -759,7 +759,7 @@ node_types:
         file: indigo-dc.galaxycloud-os
         type: tosca.artifacts.AnsibleGalaxy.role
       docker_role:
-        file: indigo-dc.docker
+        file: laniakea.docker,master
         type: tosca.artifacts.AnsibleGalaxy.role
       galaxy_role_docker:
         file: indigo-dc.galaxycloud_docker
