--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -499,7 +499,7 @@ node_types:
         file: indigo-dc.galaxycloud-os
         type: tosca.artifacts.AnsibleGalaxy.role
       galaxy_role_fastconfig:
-        file: indigo-dc.galaxycloud-fastconfig
+        file: indigo-dc.galaxycloud-fastconfig,master
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
