--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -2779,6 +2779,16 @@ node_types:
         required: false
         default: {}
 
+  tosca.nodes.indigo.network.Network:
+    derived_from: tosca.nodes.network.Network
+    properties:
+      proxy_host:
+        type: string
+        required: false
+      proxy_credential:
+        type: tosca.datatypes.Credential
+        required: false
+
 policy_types:
 
   tosca.policies.indigo.Placement:
