--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -458,7 +458,7 @@ node_types:
         file: indigo-dc.galaxycloud-os
         type: tosca.artifacts.AnsibleGalaxy.role
       galaxy_role:
-        file: indigo-dc.galaxycloud,master
+        file: indigo-dc.galaxycloud
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
@@ -499,7 +499,7 @@ node_types:
         file: indigo-dc.galaxycloud-os
         type: tosca.artifacts.AnsibleGalaxy.role
       galaxy_role_fastconfig:
-        file: indigo-dc.galaxycloud-fastconfig,master
+        file: indigo-dc.galaxycloud-fastconfig
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
@@ -762,7 +762,7 @@ node_types:
         file: laniakea.docker,master
         type: tosca.artifacts.AnsibleGalaxy.role
       galaxy_role_docker:
-        file: indigo-dc.galaxycloud_docker,master
+        file: indigo-dc.galaxycloud_docker
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
