--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -2805,13 +2805,10 @@ node_types:
         description: The chart version
         required: true
       values:
-        type: map
-        description: A dictionary/hash of values.
+        type: string
+        description: A YAML formatted string providing the chart values 
         required: false
-        entry_schema:
-          description: The values to use
-          type: string
-        default: {}
+        default: ""
 
   tosca.nodes.indigo.network.Network:
     derived_from: tosca.nodes.network.Network
