--- a/examples/slurm_glusterfs.yml
+++ b/examples/slurm_glusterfs.yml
@@ -93,21 +93,9 @@ topology_template:
             node: glusterfs_volume
             capability: tosca.capabilities.Attachment
             relationship:
-              type: tosca.relationships.AttachesTo
+              type: tosca.relationships.indigo.GlusterFS.AttachesTo
               properties:
                 location: { get_input: gluster_mount_path }
-              interfaces:
-                Standard:
-                  pre_configure_source:
-                    implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/glusterfs/glusterfs_install.yml
-                    inputs:
-                      gluster_brick_dir:  { get_property: [ TARGET, brick_dir ] }
-                      gluster_brick_name:  { get_property: [ TARGET, brick_name ] }
-                      gluster_mount_dir:  { get_property: [ SELF, location ] }
-                      gluster_wn_ips: { get_property: [ TARGET, wn_ips ] }
-                      gluster_fe_ip: { get_property: [ TARGET, fe_ip ] }
-                      gluster_options: { get_property: [ TARGET, options ] }
-                      gluster_replicas: { get_property: [ TARGET, replicas ] }
 
     wn_node:
       type: tosca.nodes.indigo.LRMS.WorkerNode.Slurm
