--- a/examples/onedata_client.yaml
+++ b/examples/onedata_client.yaml
@@ -40,19 +40,9 @@ topology_template:
             node: my_onedata_storage
             capability: tosca.capabilities.Attachment
             relationship:
-              type: tosca.relationships.AttachesTo
+              type: tosca.relationships.indigo.OneDataStorage.AttachesTo
               properties:
                 location: /mnt/disk
-              interfaces:
-                Configure:
-                  pre_configure_source:
-                    implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/onedata/oneclient_install.yml
-                    inputs:
-                      onedata_location: { get_property: [ SELF, location ] }
-                      onedata_token: { get_property: [ TARGET, credential, token ] }
-                      oneprovider_host: { get_property: [ TARGET, oneprovider_host ] }
-                      dataspace: { get_property: [ TARGET, dataspace ] }
-                      onezone_endpoint: { get_property: [ TARGET, onezone_endpoint ] }
 
     my_onedata_storage:
       type: tosca.nodes.indigo.OneDataStorage
