--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -57,6 +57,7 @@ data_types:
       remote_cidr:
         description: CIDR of the remote allowed IPs.
         type: string
+        required: no
 
 
 capability_types:
