--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -2959,6 +2959,23 @@ node_types:
         type: string
         required: false
 
+  tosca.nodes.indigo.AnsibleRecipe:
+    derived_from: tosca.nodes.ec3.Application
+    properties:
+      tasks:
+        type: list
+        entry_schema:
+          type: map
+        description: The YAML Ansible task list
+        required: true
+        default: []
+    interfaces:
+      Standard:
+        configure:
+          implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/ansible/ansible_tasks.yml
+          inputs:
+            ansible_tasks: { get_property: [ SELF, tasks ] }
+            ansible_name: { get_attribute: [ SELF, tosca_name ] }
 
 policy_types:
 
