--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -264,6 +264,10 @@ artifact_types:
     derived_from: tosca.artifacts.Root
     description: Ansible Galaxy role to be deployed in the target node
 
+  tosca.artifacts.AnsibleGalaxy.collection:
+    derived_from: tosca.artifacts.Root
+    description: Ansible Galaxy collection to be installed in the target node
+
   tosca.artifacts.Deployment.Image.Container.Docker:
     derived_from: tosca.artifacts.Deployment.Image
     description: Docker Container Image
